# fastapi-template

./: .env  .env.dev  .env.example  .gitignore  Dockerfile  Dockerfile.prod  IDEA.md  LICENSE  README.md  TODO.md  TOKNOW.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  justfile  logging.ini  logging_production.ini  production.md  pyproject.toml
.github/workflows/: lint.yml  pipeline.yml  push.yml  tests.yml
alembic/: env.py
alembic/versions/: 2025-01-21_first_migration.py  2025-02-13_first_migration.py
app/: config.py  constants.py  database.py  dependencies.py  main.py  models.py  routes.py
app/auth/: login_routes.py  models.py  security.py  services.py  user_routes.py
app/products/: models.py  routes.py  schemas.py  services.py
app/scripts/: backend_pre_start.py  initial_data.py
app/tests/: conftest.py  test_auth.py  test_checkhealth.py
certs/: nahuelapi.duckdns.org.chain.pem  nahuelapi.duckdns.org.crt  nahuelapi.duckdns.org.key
certs/accounts/acme-staging-v02.api.letsencrypt.org/directory/5b6ef6cd334dfd82d06f10fd57ff429e/: meta.json  private_key.json  regr.json
certs/nahuelapi.duckdns.org/: .companion  cert.pem  fullchain.pem  key.pem
docs/: cicd.md  deployment.md  development.md
entrypoints/: gunicorn.sh  uvicorn.sh
gunicorn/: gunicorn_conf.py
scripts/: backup.sh  prestart.sh  restore.sh
